--- a/hello/hello.html
+++ b/hello/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="node_modules/google-closure-library/closure/goog/base.js"></script>
+    <script src="../node_modules/google-closure-library/closure/goog/base.js"></script>
     <script src="hello.js"></script>
   </head>
   <body onload="sayHi()">
